fixed display overflow, started looking at problem with digits after decimal point

--- a/styles.css
+++ b/styles.css
@@ -182,12 +182,17 @@ header {
   font-family: monospace;
 }
 
+.display-wrapper {
+  overflow: hidden;
+}
+
 .display {
-  text-align: right;
+  direction: rtl;
   padding: 1rem;
   margin-block-end: 1rem;
   background-color: var(--bg-screen);
   min-height: 64px;
+  max-width: 322px;
 }
 
 .buttons-wrapper {
@@ -227,3 +232,5 @@ button {
   box-shadow: 0px 2px 0px var(--bg-key-tog-red-shd);
   color: var(--text-alt-eq);
 }
+
+/* STILL NEED TO DO ACTIVE STATES */
